Copyright RegExp doesn't match in header files
compilation is failing because the RegExp in `Makefile` doesn't match actual headers in header files (nearby_platform_ble.h         nearby_platform_se.h, nearby.h, nearby_platform_bt.h ...)

Header is saying:
```
// Copyright 2022 Google LLC
```

RegExp is expecting 

```
// Copyright 2022 Google LLC.
```

Notice the RegExp expects a `.` after LLC.

This change removes the ending `.` from the RegExp

--- a/embedded/Makefile
+++ b/embedded/Makefile
@@ -128,7 +128,7 @@ $(DIST_DIR)/nearby.h: common/target/nearby.h
 
 define copy_dist_header
 	@mkdir -p $(dir $@)
-	@test "$$(head -n 2 $< | grep 'Copyright [0-9]\{4\} Google LLC.')" != "" || \
+	@test "$$(head -n 2 $< | grep 'Copyright [0-9]\{4\} Google LLC')" != "" || \
 		(echo ; echo  "=====ERROR=====" ; echo "Missing copyright in $<" ; exit 1)
 	unifdef -t -b -x2 $(UNIFDEF_ARG) -o - $<  | cat - >$@
 	@# (mkartoz) Should be able to specify $@ as the output directly from
